--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,15 +6,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <p>Hello <%=test%></p>
+        <div id="root">
+
+        </div>
+
+        <script src="/bundle.js"></script>
     </body>
 </html>
