--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <meta name="description" content="">
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root"><%- initialContent -%>></div>
         <script src="/bundle.js"></script>
     </body>
 </html>
