--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <meta name="description" content="">
+        <script type="text/javascript">
+            window.initialData = <%- JSON.stringify(initialData) -%>
+        </script>
     </head>
     <body>
-        <div id="root"><%- initialContent -%>></div>
+        <div id="root"><%- initialMarkup -%>></div>
         <script src="/bundle.js"></script>
     </body>
 </html>
